syntax = "proto3";

option java_multiple_files = true;
option java_package = "ai.incredible.grpc";
option java_outer_classname = "AndersonServerProto";
option objc_class_prefix = "HLW";

package example;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}